@@ -2,6 +2,4 @@
 -Xmx4g
 -XX:+UseZGC
 -XX:+ZGenerational
--XX:+UseCompactObjectHeaders
 -XX:+UseStringDeduplication
---enable-preview
